--- a/tense.html
+++ b/tense.html
@@ -2,5 +2,7 @@
     <head></head>
     <body>
         <h1>Jorge osmar</h1>
+        <label for="">Nombre</label>
+        <input type="text">
     </body>
 </html>
